--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ dependencyResolutionManagement {
 rootProject.name = "YslcGbbApp"
 include ':app'
 include ':stockmarketlibrary'
+include ':youruismapp'
